added theme name to site config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -37,6 +37,7 @@ defaults:
 # Jekyll
 permalink:          /blog/:title/
 markdown:           kramdown
+theme:              massively
 highlighter:        rouge
 kramdown:
   auto_ids:         true
