added link to RSS on website

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,6 +12,7 @@ analytics-id:       "DevOpsforDefense"
 twitter:            devops4defense
 github:             jondavid-black/DevOpsForDefense
 meetup:             DevOps-for-Defense
+facebook:           devops4defense
 
 # personal
 location:           Huntsville, AL
