added youtube channel link to website

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,6 +13,7 @@ twitter:            devops4defense
 github:             jondavid-black/DevOpsForDefense
 meetup:             DevOps-for-Defense
 facebook:           devops4defense
+youtube:            channel/UCvECCp5P_Oo82ZPN5uRifpA
 
 # personal
 location:           Huntsville, AL
